[package]
name = "rtmp-server"
version = "0.1.0"
edition = "2021"

[dependencies]
byteorder = "1.5.0"
chrono = "0.4.39"
dotenvy = "0.15.7"
filetime = "0.2.25"
hex = "0.4.3"
hmac = "0.12.1"
ipnet = "2.11.0"
rand = "0.9.0"
rustls = "0.23.21"
sha2 = "0.10.8"
tokio = {version="1.43.0", features = ["full"]}
tokio-rustls = "0.26.1"
