[package]
name = "rtmp-server"
version = "1.1.3"
edition = "2021"

[dependencies]
byteorder = "1.5.0"
chrono = "0.4.39"
dotenvy = "0.15.7"
filetime = "0.2.25"
futures-util = "0.3.31"
hex = "0.4.3"
hmac = "0.12.1"
ipnet = "2.11.0"
jsonwebtoken = "9.3.0"
rand = "0.9.0"
redis = { version = "0.28.2", features = ["tokio-comp"] }
reqwest = "0.12.12"
rustls = "0.23.21"
serde = "1.0.217"
sha2 = "0.10.8"
tokio = {version="1.43.1", features = ["full"]}
tokio-rustls = "0.26.1"
tokio-tungstenite = "0.26.1"
tungstenite = "0.26.1"
url = "2.5.4"
